# mona

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
mona/: __init__.py  maybe.py  result.py
tests/: test_maybe.py  test_result.py
