[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mona"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Benjamin Holder", email = "benjamin.holder@outlook.com" },
]

[project.urls]
repository = "https://www.github.com/bdholder/mona"

[tool.black]
line-length = 100

[tool.pyright]
extraPaths = [
    "mona",
]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
